src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Standard</fullName>
        <description>all the values</description>
        <isActive>true</isActive>
        <values>
            <fullName>Adult Support</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Manage Plan</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Picture</fullName>
        </values>
        <values>
            <fullName>Plan</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Aboriginal_Band__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aboriginal Band</label>
        <referenceTo>Aboriginal_Band__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aboriginal_Origin__c</fullName>
        <label>Aboriginal Origin</label>
        <picklist>
            <picklistValues>
                <fullName>First Nation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Nation, Inuit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Nation, Metis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Nation, Metis, Inuit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inuit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metis, Inuit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Achieved_Employment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Achieved Employment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Status_Start_Date__c</fullName>
        <label>Inactive Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Age_At_Referral__c</fullName>
        <formula>Referral__r.Age_at_Referral__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age At Referral</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alert_Indicator__c</fullName>
        <formula>IMAGE( IF( ISBLANK( $User.ContactId ), 
                 IF( Number_of_Case_Alerts__c &gt; 0 , 
                  &quot;/img/samples/flag_red.gif&quot;,
                  &quot;/img/samples/flag_green.gif&quot;),
                 IF( Number_of_Alerts_for_Portal__c &gt; 0 , 
                  &quot;/img/samples/flag_red.gif&quot;,
                   &quot;/img/samples/flag_green.gif&quot;)), &quot;Indicator Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Closed_Reason__c</fullName>
        <label>Case Closed Reason</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Achieved Program Objectives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chose Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved out of Service Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt-Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt Out - Other Reasons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside of Age Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contact - Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Team_Size__c</fullName>
        <label>Case Team Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case_id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_is_i__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case is Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <formula>Account.Cell_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cell Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <description>Populated from referral.</description>
        <encrypted>true</encrypted>
        <label>Community</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connected_with_Employment_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Connected with Employment Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consent_form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Age__c</fullName>
        <formula>FLOOR((TODAY()-  Account.PersonContact.Birthdate  )/365.25+0.001)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_School__c</fullName>
        <encrypted>true</encrypted>
        <label>Current School</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAA_or_other_cultural_or_spiritual_repre__c</fullName>
        <encrypted>true</encrypted>
        <inlineHelpText>DAA or other cultural or spiritual representative involvement</inlineHelpText>
        <label>Cultural/Spiritual Representative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Referred__c</fullName>
        <label>Date Referred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_referral_accepted__c</fullName>
        <label>Date Referral Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Assessment_Date__c</fullName>
        <encrypted>true</encrypted>
        <label>Diagnosis Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Confirmation_Obtained_Indicato__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diagnosis Obtained Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligibility_Type__c</fullName>
        <label>Eligibility Type</label>
        <picklist>
            <picklistValues>
                <fullName>DD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSI FASD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSI ASD/PDD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employment_Details__c</fullName>
        <label>Employment Details</label>
        <picklist>
            <controllingField>Achieved_Employment__c</controllingField>
            <picklistValues>
                <fullName>Employed before STADD FT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed after STADD FT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed before STADD PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed after STADD PT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employment_Programs_Connected__c</fullName>
        <label>Employment Programs Connected</label>
        <picklist>
            <picklistValues>
                <fullName>CLBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCFD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aboriginal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High school</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Existing_Protocols_Safeguards__c</fullName>
        <encrypted>true</encrypted>
        <label>Existing Protocols/Safeguards</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Foundry_BC_Referral__c</fullName>
        <description>**坤랚뙈身焽豈&amp;\404!</description>
        <formula>Referral__r.Foundry_BC_Referral__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Individual/youth was directly referred through a Foundry service hub location.</inlineHelpText>
        <label>Foundry BC Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_a_legal_authority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has a legal authority?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_Care_Plan_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Health Care Plan Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <formula>Contact.HomePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IEP_Completed_and_on_File_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IEP Completed and on File Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IEP_on_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IEP on File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individual_Attached_to_Physician__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Individual Attached to Physician</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individual_Consent_on_File_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Individual Consent on File Indicator</description>
        <inlineHelpText>Individual Consent on File Indicator</inlineHelpText>
        <label>Individual Consent on File Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individual_Preferred_Name__c</fullName>
        <formula>Contact.Individual_Preferred_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Individual Preferred Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_primary_contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is primary contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_the_Individual_Attending_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is the Individual Attending School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_the_Individual_eligible_for_CLBC_Serv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is the Individual eligible for CLBC Serv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_the_individual_being_supported_by_CFD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is the individual being supported by CFD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_in_the_Home_Other__c</fullName>
        <encrypted>true</encrypted>
        <label>Language in the Home (Other)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_in_the_Home__c</fullName>
        <label>Language in the Home</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandarin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cantonese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjabi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese, n.o.s.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tagalog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Persian (Farsi)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location</description>
        <label>Location</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>Abbotsford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulkley / Stikine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burnaby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campbell River</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cariboo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chilliwack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comox Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downtown Eastside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Kootenay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraser / Cascades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Trail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haida Gwaii / Prince Rupert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kamloops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Langley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nanaimo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nechako Lakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Westminster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parksville / Qualicum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peace North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prince George</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quesnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ridge Meadows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Okanagan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surrey East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surrey North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surrey South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tri-Cities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of Referrer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Alerts_for_Portal__c</fullName>
        <label>Number of Alerts for Portal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Case_Alerts__c</fullName>
        <label>Number of Case Alerts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Crisis_Plans__c</fullName>
        <description>The sole purpose of this roll -up summary field is to provide current count of Crisis Plans to the Crisis Plan Indicator field. This field is not visible to any profiles and not added to any page layouts.</description>
        <label>Number of Crisis Plans</label>
        <summaryFilterItems>
            <field>Plan__c.Plan_Type__c</field>
            <operation>equals</operation>
            <value>Crisis Plan</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Plan__c.Plan_Status__c</field>
            <operation>equals</operation>
            <value>Draft in Progress, In Place/ Signed-off</value>
        </summaryFilterItems>
        <summaryForeignKey>Plan__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Plans__c</fullName>
        <label>Number of Plans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Protocals__c</fullName>
        <label>Number of Protocals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <picklist>
            <picklistValues>
                <fullName>Prince George/Haida Gwaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surrey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kamloops/Merritt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nanaimo/Comox Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burnaby</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Agencies_Involved__c</fullName>
        <encrypted>true</encrypted>
        <label>Other Agencies Involved</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Profile_Completion_Date__c</fullName>
        <label>Person Profile Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Personal_Profile_Completion_Date__c</fullName>
        <label>Personal Profile Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Personal_Profile_on_File_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal Profile on File Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Indicator__c</fullName>
        <formula>IMAGE( IF( Number_of_Crisis_Plans__c &gt; 0 , 
          &quot;/img/samples/flag_red.gif&quot;,
          &quot;/img/samples/flag_green.gif&quot;),
        &quot;Indicator Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Crisis Plan Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Full_Name__c</fullName>
        <formula>Primary_Referral_Contact__r.Contact_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Primary Contact)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_is_Individual_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cannot be checked if individual has a legal authority</inlineHelpText>
        <label>Primary Contact is Individual Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Referral_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Case_Contact__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Protocol_Indicator__c</fullName>
        <formula>IMAGE( IF( Number_of_Protocals__c &gt; 0 , 
          &quot;/img/samples/flag_red.gif&quot;,
          &quot;/img/samples/flag_green.gif&quot;),
        &quot;Indicator Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Protocol Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psychological_assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Psychological assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Psychologist_Assessment_Location__c</fullName>
        <label>Psychologist Assessment Location</label>
        <picklist>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Psychologist_Contact_Email__c</fullName>
        <encrypted>true</encrypted>
        <label>Psychologist Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Psychologist_Contact_Phone_Number__c</fullName>
        <encrypted>true</encrypted>
        <label>Psychologist Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Psychologist_First_Name__c</fullName>
        <encrypted>true</encrypted>
        <label>Psychologist First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psychologist_Last_Name__c</fullName>
        <encrypted>true</encrypted>
        <label>Psychologist Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psychologist_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Psychologist Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Psychologist_Name_text__c</fullName>
        <encrypted>true</encrypted>
        <label>Psychologist Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiving_Services_on_Reserve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receiving CLBC Services on Reserve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral</label>
        <referenceTo>Referral__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_to_Long_Term_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referred to Long Term Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referring_Organization__c</fullName>
        <label>Referring Organization</label>
        <picklist>
            <picklistValues>
                <fullName>CFD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Northern Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraser Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vancouver Island Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vancouver Coastal Region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registered__c</fullName>
        <label>Registered?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Individual__c</fullName>
        <formula>TEXT(Primary_Referral_Contact__r.Relationship_Subtype__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship to Individual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residence_Type__c</fullName>
        <label>Residence Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cluster Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeless – Shelter / Couch Surfing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeless – Street / Tent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeshare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living in Foster Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living with Parent / Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Independent Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staffed Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supported Home Living / Apartment Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Self_Identifies_as_Aboriginal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self Identifies as Aboriginal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_limitations_hearing_sight_mob__c</fullName>
        <encrypted>true</encrypted>
        <label>Special considerations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transition_Package_Sent_Date__c</fullName>
        <label>Transition Package Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transition_Package_Sent__c</fullName>
        <label>Transition Package Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UniqueRec__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ONLY ONE CASE PER PERSON ALLOWED</description>
        <label>ONLY ONE CASE PER PERSON ALLOWED</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Waiting_for_CFD_funding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiting for CFD funding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waiting_for_CLBC_funding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiting for CLBC funding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waiting_for_EPBC_funding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiting for EPBC funding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waiting_for_Health_funding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiting for Health funding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waiting_for_School_funding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiting for School funding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>What_services_they_are_waiting_for__c</fullName>
        <encrypted>true</encrypted>
        <label>What services they are waiting for</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Year_13__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Year 13</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Community__c</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Is_primary_contact__c</columns>
        <columns>Primary_Contact_Full_Name__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Location__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>Alert_Indicator__c</columns>
        <columns>Plan_Indicator__c</columns>
        <columns>Protocol_Indicator__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <sharedTo>
            <group>All_Coordinators</group>
            <group>All_Directors</group>
            <group>All_External_Portal_users</group>
            <role>Project_Administrator</role>
        </sharedTo>
    </listViews>
</CustomObject>